--- a/public_html/themes/itsme_theme/main.css
+++ b/public_html/themes/itsme_theme/main.css
@@ -15,8 +15,13 @@ body {
 
 /*change this to increase page width do not remove---*/
 .row{max-width: 1024px;}  
-.rowFull{ max-width: 100%;} 
+.rowFull{ max-width: 100%;}
+.rowWide { max-width: 90%; margin: 0 auto;}
 .navRow{ height: 100px; padding: 30px 0 0 0;}
+
+.centered{ text-align: center;}
+.bigHeader{ font-size: 50px; padding: 20px 0;}
+
 
 /*-------typography--------*/
 
@@ -27,14 +32,7 @@ h5,h6,pre,form,p,blockquote,th,td {
   padding: 0;
   direction: ltr; }
 
-.Logo{ 
-	margin-left: -125px;
-	position: absolute;
-	top: 50px;
-	left: 50%;
-	width: 250px;
-	height: 300px;
-	visibility: visible }
+.Logo{ margin-left: -125px;position: absolute; top: 50px; left: 50%; width: 250px;height: 300px;visibility: visible }
 
 header.introHeader h1{ padding: 100px 0 0 0; text-align: right; }
 .projectLink{display: block; float: right;}
@@ -47,17 +45,9 @@ a:hover, a:focus { color: #2795b6; }
 a img {border: none; }
 
 /* Default paragraph styles */
-p {
-  font-family: inherit;
-  font-weight: normal;
-  line-height: 1.6;
-  margin-bottom: 1.25rem;
-  text-rendering: optimizeLegibility; }
+p { font-family: inherit;font-weight: normal; line-height: 1.6; margin-bottom: 1.25rem; text-rendering: optimizeLegibility; }
 
-p aside {
-    font-size: 0.875rem;
-    line-height: 1.35;
-    font-style: italic; }
+p aside {font-size: 0.875rem; line-height: 1.35;font-style: italic; }
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
@@ -69,34 +59,45 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
   line-height: 1.4; }
 
-h1 sgrid, h2 sgrid, h3 sgrid, h4 sgrid, h5 sgrid, h6 sgrid {
-    font-size: 60%; color: #6f6f6f; line-height: 0; }
+h1 sgrid, h2 sgrid, h3 sgrid, h4 sgrid, h5 sgrid, h6 sgrid { font-size: 60%; color: #6f6f6f; line-height: 0; }
 	
 	
 	/* other Typography Defaults */
 em, i { font-style: italic; line-height: inherit; }
-
 strong, b { font-weight: bold; line-height: inherit; }
-
 sgrid { font-size: 60%; line-height: inherit; }
-	
-		
+			
 section{width: 100%; padding: 20px 0;}
 .introDownLoad{ background: #f2f2f2;}
 .headerSlide{ background: #EFCC65; padding: 30px 0 0 0; }
-.services{background: #333 url(images/dividerserv.png) no-repeat center top; }
+.services{background: url(images/dividerserv.png) no-repeat center top; }
 section.intro{ background: #fff; }
-section.work{ background: #000; min-height: 300px; }
+section.work{ float: left; }
+section.BlogRow{ background: #f8f8f8; min-height: 300px; }
 section.contact{ background: #ccc; min-height: 300px; }
 section.footerRow{background: #EFCC65;}
 
+/*Posrtfolio*/
 
-.services .grid-4{ text-align: center;}	
-  
-  
+.portHeader{ padding: 0 0 30px 0; margin: 0 0 30px 0; color: #fff; }
+.portHeader h3,.portHeader p{ color: #fff!important;}
+
+.smallPortBox{ width: 100%; min-height: 150px; background: #fff; margin: 10px 0; float: left;}
+.bigPortBox{ width: 100%; min-height: 250px; background: #fff; margin: 10px 0; float: left;}
+
+
+nav.BlogNav{}
+nav.BlogNav ul{ list-style: none;}
+nav.BlogNav li{ display: block; float: left;}
+
+.servicesIntro{ padding: 50px 0 100px 0; text-align: center;}
+.services .grid-4 h3{ color: #128EE8; border-bottom: dotted 2px #ccc; padding: 0 0 40px 0; margin: 0 0 30px 0; }
+a.serviceButton{ background: #128EE8; color: #fff;}
+img.HomeMonitor{ padding: 80px 0 0 0;}
+.services .grid-4{ color: #fff;  }	
+.rightHomeServ{ text-align: right;}  
 .downloadWrap{ background: #fff; padding: 15px;}
 .downloadWrapHold{ background: #333;}
-
 
 .social{}
 .social a{ width: 35px; height: 35px; background: #ccc; display: block; float: right; margin: 0 0 0 5px;
@@ -109,3 +110,24 @@ background: url(images/social-icons.png) no-repeat;}
 .social a.inLink:hover{ background-position: -70px -35px;}
 .social a.youLink{ background-position: -105px 0px;}
 .social a.youLink:hover{ background-position: -105px -35px;}
+
+
+.helloBox{ background: #1D5EE1; width: 100%; color: #fff; padding: 15px;}
+.helloBox h3{ color: #fff;}
+.homeFootForm{border-right: solid 1px #ccc; min-height: 300px;}
+.helloBoxWrapper{ padding: 0 0 0 20px!important; background: url(images/cross.png) no-repeat #ccc; }
+a.QuoteButton{ background: #333; color: #fff; text-align: center; display: block; width: 100%; padding: 10px 0;}
+
+/*--parallax--*/
+.slide{
+	background-attachment: fixed;
+	width:100%;
+	background: url(images/dividerserv.png) no-repeat top center;
+	height:auto;
+	position: relative;
+	padding: 0;
+}
+/* Slide 2 */ 
+#slide2{
+	background: url(images/service-parrallax.jpg) repeat-y;
+}
